added quickstart example and support for jbang to run examples